Changed hobby text to <p> instead of <h1>

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   
   <div class="main-content">
     <div class="main-page">
-      <h1>
-        Joseph Collado <br>
+      <h1>Joseph Collado</h1>
+      <p class="home-blurb">
         My favorite hobby is both playing video games and coding them. The best part
         about loving both is that I like to think about how the developers of a game
         were able to implement some of the features in a game, especially the more 
         complicated ones.
-      </h1>
+      </div>
       </p>
     </div>
   </div>
